<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/layout_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="@dimen/activity_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar">

        <ImageView
            android:id="@+id/icon_name"
            android:layout_width="@dimen/icon_small"
            android:layout_height="@dimen/icon_small"
            android:src="@drawable/ic_name"
            app:layout_constraintBottom_toBottomOf="@id/input_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/input_name"
            app:tint="?android:colorPrimary" />

        <ImageView
            android:id="@+id/icon_package"
            android:layout_width="@dimen/icon_small"
            android:layout_height="@dimen/icon_small"
            android:src="@drawable/ic_package"
            app:layout_constraintBottom_toBottomOf="@id/input_package"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/input_package"
            app:tint="?android:colorPrimary" />

        <ImageView
            android:id="@+id/icon_tag"
            android:layout_width="@dimen/icon_small"
            android:layout_height="@dimen/icon_small"
            android:src="@drawable/ic_tag"
            app:layout_constraintBottom_toBottomOf="@id/input_tag"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/input_tag"
            app:tint="?android:colorPrimary" />

        <ImageView
            android:id="@+id/icon_notes"
            android:layout_width="@dimen/icon_small"
            android:layout_height="@dimen/icon_small"
            android:src="@drawable/ic_note"
            app:layout_constraintBottom_toBottomOf="@id/input_note"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/input_note"
            app:tint="?android:colorPrimary" />

        <ImageView
            android:id="@+id/icon_favourite"
            android:layout_width="@dimen/icon_small"
            android:layout_height="@dimen/icon_small"
            android:src="@drawable/ic_favourite"
            app:layout_constraintBottom_toBottomOf="@id/switch_favourite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/switch_favourite"
            app:tint="?android:colorPrimary" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_icons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="icon_name, icon_package, icon_notes, icon_favourite" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_medium"
            app:layout_constraintBottom_toTopOf="@id/input_package"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier_icons"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_app_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_package"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_medium"
            android:layout_marginTop="@dimen/padding_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier_icons"
            app:layout_constraintTop_toBottomOf="@id/input_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_app_package" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_tag"
            style="@style/TextInputLayout.AutoComplete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_medium"
            android:layout_marginTop="@dimen/padding_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier_icons"
            app:layout_constraintTop_toBottomOf="@id/input_package">

            <io.smileyjoe.library.tags.TagInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_app_tag"
                app:layout_autocompleteRow="@layout/row_tag_autocomplete"
                app:xml_chip="@xml/chip_span" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_note"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_medium"
            android:layout_marginTop="@dimen/padding_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier_icons"
            app:layout_constraintTop_toBottomOf="@id/input_tag">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/hint_app_notes"
                android:inputType="textMultiLine"
                android:lines="5"
                android:maxLines="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switch_favourite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_medium"
            android:layout_marginTop="@dimen/padding_medium"
            android:text="@string/action_favourite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier_icons"
            app:layout_constraintTop_toBottomOf="@id/input_note" />
        
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_padding"
        android:layout_marginBottom="@dimen/activity_padding"
        android:text="@string/button_save"
        app:icon="@drawable/ic_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>